2009-05-08 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.8 Release.

	* avc.c: Fixed compilation on OSX.

	* config.h.win, largefile.c, largefile.h: Added Large File Support
	  for Windows. We're using the fgetpos/fsetpos APIs by assuming
	  the fpos_t type is a 64-bit integer.

	* flvdump.c: Fixed a few compilation warnings.

2009-05-07 Marc Noirot <marc.noirot@gmail.com>
	* flvdump.c, flvmeta.c, types.h, configure.ac: Added Large File
	  Support for architectures supporting the ftello function.

	* flvdump.c: Fixed flvdump so it will exit right after reading
	  an invalid tag instead of going on and eventually crash.

2009-05-02 Marc Noirot <marc.noirot@gmail.com>
	* flvdump.c: Fixed compilation warnings in GCC 4.3.3.

2009-04-19 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c avc.h avc.c: Added support for AVC video resolution
	  detection.

	* flv.h flvdump.c: Added support for the Speex codec.

	* flv.h flvdump.c: Added support for rare video frame types.

	* flvmeta.c (compute_metadata): Do not add width and height data
	  if not detected in the first video frame.

2009-03-04 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (get_flv_info): Fixed a bug where two consecutive tags of
	  different types and with decreasing timestamps would cause extended
	  timestamps to be incorrectly used for the next tags.

2008-09-29 Marc Noirot <marc.noirot@gmail.com>
	* flv.h, flvdump.c: Added support for JPEG video frames.

2008-09-25 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.7 Release.

	* flvmeta.c: Added invalid timestamp correction.

2008-09-23 Marc Noirot <marc.noirot@gmail.com>
	* flvdump.c: Fixed a bug causing the FLV parsing to lose track
	  of tags in the case of malformed metadata.

	* flvdump.c: Added invalid timestamp correction.

2008-09-23 Marc Noirot <marc.noirot@gmail.com>
	* flv.h, flv.c (flv_get_timestamp, flv_tag_set_timestamp): Added
	  the flv_get_timestamp macro and the flv_tag_set_timestamp function